the cells need to be imported before we handle charts, tdf#81396

Change-Id: Ic0dc47b71e76aa4825a867fc171406d126ae0518
Reviewed-on: https://gerrit.libreoffice.org/19568
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>